# derolas_ui

./: .dockeringore  .gitignore  .release-it.yml  Dockerfile  makefile  nix-shell.nix  package.json  rpc-api-spec.yaml  shell.nix  tauri-shell.nix  tsconfig.json  vite.config.js
.github/workflows/: common_check.yaml  publish.yaml
charts/derolas-ui/: Chart.yaml  values.yaml
charts/derolas-ui/templates/: NOTES.txt  _helpers.tpl  deployment.yaml  hpa.yaml  ingress.yaml  service.yaml  serviceaccount.yaml
charts/derolas-ui/templates/tests/: test-connection.yaml
src/: app.css  app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/agent_client/: README.md
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  types.rs
src/components/types/: src_tauri.ts
src/lib/components/: AgentBuilder.svelte  AgentDeployer.svelte  AgentTable.svelte  ApplicationVersionBadge.svelte  ConfigTable.svelte  ExchangeMetrics.svelte  Footer.svelte  LogsModal.svelte  Metrics.svelte  Nodes.svelte  StartDockerDialog.svelte  StatsModal.svelte  UserSettings.svelte
src/lib/components/types/: rpc-spec.ts  src_tauri.ts
src/lib/components/ui/alert-dialog/: alert-dialog-title.svelte
src/lib/components/ui/button/: button.svelte
src/lib/components/ui/card/: card.svelte
src/lib/components/ui/dialog/: dialog-content.svelte
src/lib/components/ui/toggle-group/: toggle-group-item.svelte  toggle-group.svelte
src/lib/contracts/: interface.ts
src/routes/: +layout.svelte  +page.svelte
src/stores/: configs.ts  deployments.ts  keys.ts
src/tests/: main.test.js
(+1 files in other folders)
