[package]
name = "agent_runner"
version = "0.1.46"
description = "A Tauri App"
authors = ["you"]
edition = "2021"
default-run = "agent_runner"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "agent_runner_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.2.0", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4.41", features = ["serde"] }
tokio = { version = "1.45.1", features = ["full"] }
typeshare = "1.0.4"
futures = "0.3"
reqwest = { version = "0.12.20", default-features = false, features = ["rustls-tls"] }
bollard = "0.18.1"
rand = { version = "0.9.1"  }
dirs = "6.0"
base64 = "0.22"
tauri = { version = "2.5.1", features = [] }
futures-util = "0.3"
openapi = { path = "./agent_client" } 
tauri-plugin-opener = "2.3.0"
tauri-plugin-dialog = "2.2.2"
tauri-plugin-store = "2.2.1"
tauri-plugin-fs = "2.3.0"
tauri-plugin-http = "2.4.4"
tauri-plugin-websocket = "2.3.1"

